--- a/ani.html
+++ b/ani.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p{
+           animation:example 5s ease-in infinite;
+        }
+        @keyframes example{
+            0%{
+                color:blue;
+
+            }
+            50%{
+                color: red;
+            }
+            100%{
+color:yellow;
+            }
+        }
+    </style>
 </head>
 <body>
     <p>Hello World</p>
