--- a/ani.html
+++ b/ani.html
@@ -15,6 +15,7 @@
             }
             50%{
                 color: red;
+                margin-left:300px;
             }
             100%{
 color:yellow;
